# yast2-dns-manager

./: .gitignore  .travis.yml  RPMNAME
package/: yast2-dns-manager.spec  yast2-samba-internal-dns-manager.spec
src/: Makefile.am
src/clients/: dns-manager.py  samba-internal-dns-manager.py
src/desktop/: org.opensuse.yast.DNS-MANAGER.desktop  org.opensuse.yast.SAMBA-INTERNAL-DNS-MANAGER.desktop  yast2-samba-internal-dns-manager.desktop
src/include/dns-manager/: complex.py  dialogs.py  wizards.py
src/include/samba-internal-dns-manager/: complex.py  dialogs.py  wizards.py
src/modules/: SambaToolDnsAPI.py
